--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,16 +10,16 @@
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    %link{href: "https://fonts.googleapis.com/css?family=Dosis|Oswald|Playfair+Display", rel: "stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css?family=Dosis|Domine|Playfair+Display", rel: "stylesheet"}
     %link{rel: "stylesheet", href: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/dracula.min.css"}
     %script{src: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"}
 
 %body
   %nav.desktop
     %ul
-      %li= link_to 'MARIAN SERNA', about_url
+      %li= link_to 'Marian Serna', about_url
       %li= "X"
-      %li= link_to 'BLOG', root_url
+      %li= link_to 'Blog', root_url
       %li.right= link_to 'Portfolio', 'https://www.marianserna.com'
 
   %nav.mobile
