--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -1,126 +1,10 @@
-@media (min-width: $desktop-breakpoint) {
-  .home {
-    box-sizing: border-box;
-    width: 100%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-
-    .sidebar {
-      width: 30%;
-      margin: 100px 0 50px 0;
-      border-left: solid 1px #E0E0E0;
-
-      aside {
-        padding: 15%;
-      }
-
-      aside a {
-        width: 100%;
-        text-decoration: none;
-        display: block;
-        font-family: 'Playfair Display', serif;
-        background-color: #263238;
-        margin: 15px;
-        padding: 5px;
-        text-align: center;
-        box-shadow: 2px 2px 3px #888888;
-      }
-
-      aside h2 {
-        font-size: 2em;
-        color: #fff;
-      }
-
-      aside h2:hover {
-        color: #80DEEA;
-      }
-    }
-
-    .latest {
-      width: 45%;
-      height: 400px;
-      margin-top: 100px;
-      margin-right: 10%;
-      position: relative;
-
-      .image {
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-repeat: no-repeat;
-        position: absolute;
-        -webkit-filter: blur(2px);
-        -moz-filter: blur(2px);
-        -o-filter: blur(2px);
-        -ms-filter: blur(2px);
-        filter: blur(2px);
-        transform: rotate(-5deg);
-      }
-
-      .titles {
-        transform: translateX(-18%) translateY(30%);
-        line-height: 0.5em;
-        color: #fff;
-        background-color: #263238;
-        padding: 1.5em;
-        box-shadow: 2px 2px 3px #212121;
-
-        h2 {
-          font-family: $h2-font;
-          font-size: 2em;
-          line-height: 1.5em;
-        }
-
-        h3 {
-          font-family: $h2-font;
-          font-size: 0.8em;
-          font-weight: lighter;
-          line-height: 1.5em;
-          color: #80DEEA;
-        }
-
-        p {
-          font-family: $h2-font;
-          font-size: 1em;
-          line-height: 1.5em;
-        }
-      }
-
-      a.read {
-        position: absolute;
-        top: 65%;
-        right: 20%;
-        text-decoration: none;
-        color: #fff;
-        padding: 20px;
-        border-radius: 3%;
-        font-family: 'Playfair Display', serif;
-        background-color: $a-bg-color;
-        box-shadow: 1px 1px 1px $titles-bg-color;
-      }
-
-      a:hover {
-        border: solid 1px #80DEEA;
-      }
-    }
-  }
-}
-
 @media (max-width: $tablet-breakpoint) {
   .home {
-    box-sizing: border-box;
-    width: 100%;
-    position: relative;
-    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
 
     .latest {
       position: relative;
-      padding-top: 20%;
+      padding-top: 25%;
 
       .image {
         display: none;
@@ -128,7 +12,7 @@
 
       .titles {
         position: relative;
-        height: 35vh;
+        height: 40vh;
         line-height: 0.5em;
         background-color: $titles-bg-color;
         padding: 2.5em;
@@ -136,25 +20,12 @@
       }
 
       h2 {
-        font-family: $h2-font;
-        border-bottom: solid 1px ;
-        font-size: 1.5em;
-        line-height: 1em;
-        color: $h2-color;
-        padding-top: 8%;
+        padding-bottom: 5px;
       }
 
-      h3 {
-        font-family: $h2-font;
-        font-size: 0.8em;
-        line-height: 0.6em;
-        color: $h3-color;
-      }
-
-      a {
+      a.read {
         position: relative;
-        bottom: 65%;
-        left: 75%;
+        left: 30%;
         text-decoration: none;
         color: #fff;
         padding: 20px;
@@ -164,8 +35,8 @@
         box-shadow: 2px 2px 3px $titles-bg-color;
       }
 
-      a:hover {
-        border: solid 1px #80DEEA;
+      a.read:hover {
+        color: $read-link-hover-color;
       }
 
       p {
@@ -176,20 +47,103 @@
       }
     }
 
-    aside a {
-      display: none;
+    aside {
+      a {
+        display: none;
+      }
+
+      h2 {
+        border-bottom: none;
+      }
     }
   }
 }
 
-@media (max-width: $tablet-breakpoint) {
-  .titles {
-    margin-right: 30px;
-    margin-left: 30px;
+
+@media (min-width: $desktop-breakpoint) {
+
+  .titles h2 {
+    padding-bottom: 5px;
   }
 
-  .home .latest a  {
+  .sidebar {
+    width: 30%;
+    margin: 150px 0 50px 0;
+    border-left: solid 1px #E0E0E0;
+
+    aside {
+      padding: 15%;
+    }
+
+    aside a {
+      width: 100%;
+      text-decoration: none;
+      display: block;
+      font-family: 'Playfair Display', serif;
+      background-color: #263238;
+      margin: 15px;
+      padding: 5px;
+      text-align: center;
+      box-shadow: 2px 2px 3px #888888;
+    }
+
+    aside h2 {
+      font-size: 1.5em;
+      color: #fff;
+      border-bottom: none;
+      padding-top: 0px;
+    }
+
+    aside h2:hover {
+      color: $aside-h2-hover;
+    }
+  }
+
+  .latest {
+    width: 45%;
+    height: 400px;
+    margin-top: 150px;
+    margin-right: 10%;
     position: relative;
-    left: 55%;
+
+    .image {
+      width: 100%;
+      height: 100%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      position: absolute;
+      -webkit-filter: blur(2px);
+      -moz-filter: blur(2px);
+      -o-filter: blur(2px);
+      -ms-filter: blur(2px);
+      filter: blur(2px);
+      transform: rotate(-5deg);
+    }
+
+    .titles {
+      transform: translateX(-18%) translateY(30%);
+      line-height: 0.5em;
+      color: #fff;
+      background-color: #263238;
+      padding: 1.5em;
+      box-shadow: 2px 2px 3px #212121;
+    }
+
+    a.read {
+      position: absolute;
+      top: 65%;
+      right: 20%;
+      text-decoration: none;
+      color: #fff;
+      padding: 20px;
+      border-radius: 3%;
+      font-family: 'Playfair Display', serif;
+      background-color: $a-bg-color;
+      box-shadow: 1px 1px 1px $titles-bg-color;
+    }
+
+    a.read:hover {
+      color: $read-link-hover-color;
+    }
   }
 }
