Adding date to posts

--- a/app/assets/stylesheets/pages/post.scss
+++ b/app/assets/stylesheets/pages/post.scss
@@ -4,6 +4,11 @@
   padding: 100px 15% 5% 15%;
   background-color: $content-bg-color;
 
+  .post_info {
+    text-align: right;
+    color: #212121;
+  }
+
   .post_titles {
     background-color: #90A4AE;
     padding: 40px;
