--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -14,8 +14,12 @@
       %a{href: category_url(@post.category), class: 'category_name'}
         In:
         = @post.category.name
+    %p.post_info
+      = @post.created_at.to_date.to_s(:long)
+      = "-> { By: Marian Serna }"
 
   .content
+    -# Use squigly instead of equals for proper haml indentation in <pre>
     ~ @post.rendered_content
 
 .suggested_posts
