--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,10 +31,12 @@
           %hr
           NU
     %ul
+      %li= link_to 'Home', root_url
       %li= link_to 'Featured', featured_posts_url
       %li= link_to 'Categories', categories_url
       %li= link_to 'Other Posts', posts_url
-      %li= link_to 'Home', root_url
+      %li= link_to 'About', about_url
+
 
 
   -# /This is for your flash message to show up
