Fixed about page nav trigger + font-size for mobile

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -4,8 +4,7 @@
   .massive Hello!
   .text
     %p
-      Welcome to my blog! I'm Marian. I'm in my last year of design and development.
-      While trying to learn Ruby and Ruby on Rails, I didn't find any good tutorials out there for
-      absolute beginners. One day I just decided to start writing articles about
+      I'm Marian. I'm in my last year of design and development.
+      One day I just decided to start writing articles about
       things in the way I would have liked somebody to explain them to me. That is how
       this blog was born. Hope this is useful to somebody! :)
