--- a/app/assets/stylesheets/pages/about.scss
+++ b/app/assets/stylesheets/pages/about.scss
@@ -35,11 +35,11 @@
 
 @media(min-width: 0px) and (max-width: $tablet-breakpoint) {
   .about-container {
-    margin-top: 75px;
+    padding-top: 150px;
 
     .text p {
       width: 80%;
-      font-size: 3.3vw;
+      font-size: 5vw;
       line-height: 6.5vw
     }
   }
@@ -56,8 +56,8 @@
       width: 65%;
       margin: 100px auto;
       font-family: $p-font;
-      font-size: 2vw;
-      line-height: 3vw;
+      font-size: 2.5vw;
+      line-height: 5vw;
       color: #263238;
     }
   }
