Changing line-height to h2s and h3s

--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -27,7 +27,7 @@
 
   = f.input :title
   = f.input :summary
-  = f.input :content
+  ~ f.input :content
 
   -# new_admin_post_post_image_url needs brackets after because we have to tell it
   -# which post we're creating a post_image for
