Changing posts content typeface

--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -31,8 +31,8 @@ $aside-h2-hover: #D4E157;
 $h1-font: 'Playfair Display', serif;
 $h2-font: 'Playfair Display', serif;
 $nav-font: 'Domine', serif;
-$h3-font: 'Dosis', sans-serif;
-$p-font: 'Dosis', sans-serif;
-$a-font: 'Dosis', sans-serif;
+$h3-font: 'Roboto Slab', serif;
+$p-font: 'Roboto Slab', serif;
+$a-font: 'Roboto Slab', serif;
 
 // Sizing / Padding
