--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    %link{href: "https://fonts.googleapis.com/css?family=Dosis|Domine|Playfair+Display", rel: "stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css?family=Roboto+Slab:100|Domine|Playfair+Display", rel: "stylesheet"}
     %link{rel: "stylesheet", href: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/dracula.min.css"}
     %script{src: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"}
 
