Hid portfolio from nav

--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -27,10 +27,14 @@ $read-link-hover-color: #D4E157;
 $aside-h2-hover: #D4E157;
 
 // Fonts
-
+// $h1-font: 'Poppins', sans-serif;
+// $h2-font: 'Poppins', sans-serif;
 $h1-font: 'Playfair Display', serif;
 $h2-font: 'Playfair Display', serif;
 $nav-font: 'Domine', serif;
+// $h3-font: 'Taviraj', serif;
+// $p-font: 'Taviraj', serif;
+// $a-font: 'Taviraj', serif;
 $h3-font: 'Roboto Slab', serif;
 $p-font: 'Roboto Slab', serif;
 $a-font: 'Roboto Slab', serif;
