--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -10,12 +10,10 @@ $desktop-nav-break: 769px;
 // Colours
 $h2-color: #CDDC39;
 $h2-user-color: #80DEEA;
-$h3-color: #CDDC39;
-$p-color: #fff;
+$h3-color: #F2C640;
+$p-color: #333333;
 $content-color: #424242;
 $content-bg-color: #F5F5F5;
-$titles-bg-color: #263238;
-$box-shadow-color: #212121;
 $line-color: #263238;
 $a-bg-color: #90A4AE;
 $content-bg-color: #212121;
@@ -27,16 +25,11 @@ $read-link-hover-color: #D4E157;
 $aside-h2-hover: #D4E157;
 
 // Fonts
-// $h1-font: 'Poppins', sans-serif;
-// $h2-font: 'Poppins', sans-serif;
-$h1-font: 'Playfair Display', serif;
-$h2-font: 'Playfair Display', serif;
-$nav-font: 'Domine', serif;
-// $h3-font: 'Taviraj', serif;
-// $p-font: 'Taviraj', serif;
-// $a-font: 'Taviraj', serif;
-$h3-font: 'Roboto Slab', serif;
-$p-font: 'Roboto Slab', serif;
-$a-font: 'Roboto Slab', serif;
+$h1-font: 'Trirong', serif;
+$h2-font: 'Trirong', serif;
+$nav-font: 'Nunito', sans-serif;
+$h3-font: 'Trirong', serif;
+$p-font: 'Trirong', serif;
+$a-font: 'Trirong', serif;
 
 // Sizing / Padding
