--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,8 +10,7 @@
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    %link{href: "https://fonts.googleapis.com/css?family=Roboto+Slab:100|Domine|Playfair+Display", rel: "stylesheet"}
-    -# %link{href:"https://fonts.googleapis.com/css?family=Taviraj:200|Poppins:300", rel:"stylesheet"}
+    %link{href: "https://fonts.googleapis.com/css?family=Nunito|Trirong", rel: "stylesheet"}
     %link{rel: "stylesheet", href: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/dracula.min.css"}
     %script{src: "//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/highlight.min.js"}
 
@@ -19,9 +18,12 @@
   %nav.desktop
     %ul
       %li= link_to 'Marian Serna', about_url
-      %li= "X"
-      %li= link_to 'Blog', root_url
-      -# %li.right= link_to 'Portfolio', 'https://www.marianserna.com'
+      %li= "⥉"
+      %li= link_to 'Home', root_url
+      %li= link_to 'Categories', categories_url
+
+
+
 
   %nav.mobile
     .menu-trigger
@@ -33,9 +35,7 @@
           NU
     %ul
       %li= link_to 'Home', root_url
-      %li= link_to 'Featured', featured_posts_url
       %li= link_to 'Categories', categories_url
-      %li= link_to 'Other Posts', posts_url
       %li= link_to 'About', about_url
 
 
