--- a/app/assets/stylesheets/components/posts_list.scss
+++ b/app/assets/stylesheets/components/posts_list.scss
@@ -1,65 +1,37 @@
-// Styles for: posts index, categories index, and other posts.
+// Styles for categories index
 
 #index-container {
   box-sizing: border-box;
   position: relative;
   padding: 10% 15% 5% 15%;
 
-  .posts, .categories {
-    display: flex;
-    position: relative;
+  .titles {
     width: 100%;
-    justify-content: center;
-    align-items: flex-end;
+    display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    padding-top: 10%;
+    align-items: center;
+    text-decoration: none;
+    padding: 25px;
+    background: #FFF;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    margin-bottom: 10px;
 
-    a.medium.post_wrapper, a.medium.category_wrapper {
-      width: calc(30% - 10px);
-      margin: 10px;
-      text-decoration: none;
+    &:hover {
+      background: #BEF1ED;
+      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
     }
 
-    .post, .category {
-      background-size: cover;
-      background-repeat: no-repeat;
-      width: 100%;
-      height: 250px;
-      -webkit-filter: grayscale(100%);
-      box-shadow: 2px 2px 3px #888888;
-      position: relative;
-    }
-
-    .post:hover, .category:hover {
-      -webkit-filter: none;
-    }
-
-    .background {
-      width: 100%;
-      background-color: rgba(33,33,33,0.8);
-      position: absolute;
-      bottom: 0px;
-    }
-
-    .titles {
-      padding: 15px;
-      z-index: 25;
-
-      h2 {
-        font-size: 1em;
-        padding-bottom: 5px;
-        border-bottom: solid 1px #fff;
-      }
-
-      p {
-        color: #fff;
-      }
+    h3:hover, h4:hover {
+      color: #03243A;
     }
   }
 }
 
 @media(max-width: $tablet-breakpoint) {
-
   #index-container .posts a.medium.post_wrapper,
   #index-container .categories a.medium.category_wrapper {
     width: 100%;
