--- a/app/assets/stylesheets/pages/post.scss
+++ b/app/assets/stylesheets/pages/post.scss
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   position: relative;
   padding: 100px 15% 5% 15%;
-  background-color: $content-bg-color;
 
   .post_info {
     text-align: right;
@@ -10,14 +9,12 @@
   }
 
   .post_titles {
-    background-color: #90A4AE;
     padding: 40px;
 
     h2 {
       font-family: $h2-font;
       font-size: 3em;
       line-height: 1.5em;
-      color: #CDDC39;
       margin-top: 0px;
       padding-top: 15px;
       margin-bottom: 0.3em;
@@ -31,9 +28,9 @@
 
   .content {
     font-size: 1.2em;
-    color: #757575;
-    padding: 8% 20%;
-    background-color: #f5f5f5;
+    color: #3A4457;
+    padding: 8% 10%;
+    word-wrap: break-word;
 
     h2, h3, h4, h5, h6 {
       padding-top: 30px;
@@ -43,6 +40,8 @@
 
     img {
       max-width: 100%;
+      display: flex;
+      justify-content: center;
     }
 
     p, li {
@@ -64,26 +63,34 @@
 }
 
 .suggested_posts {
+  width: 100vw;
   display: flex;
-  width: 100%;
-  height: 150px;
-  margin: 0px;
-  padding: 0px;
-  background-color: $content-bg-color;
+  flex-wrap: wrap;
 
-  .background {
-    position: relative;
-    bottom: -15px;
-  }
-
-  a {
-    width: 33.33%;
-    -webkit-filter: grayscale(100%);
+  .suggested_post_container {
+    display: flex;
+    width: 33.3%;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    flex-wrap: wrap;
     text-decoration: none;
-  }
+    padding: 25px;
+    background: #FFF;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
-  a:hover {
-    -webkit-filter: none;
+    h3 {
+      border-bottom: solid 1px #9068BE;
+    }
+
+    &:hover {
+      background: #BEF1ED;
+      box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
   }
 
   .post {
@@ -124,7 +131,9 @@
     }
 
     .content {
-      padding: 8% 12%;
+      max-width: 90%;
+      padding: 8% 8%;
+      word-wrap: break-word;
 
       p, li {
         font-size: 1em;
@@ -139,5 +148,4 @@
   .suggested_posts {
     display: none;
   }
-
 }
