--- a/app/assets/stylesheets/base/common.scss
+++ b/app/assets/stylesheets/base/common.scss
@@ -7,6 +7,16 @@ a {
   color: #9068BE;
 }
 
+.content h2, .content h3 {
+  font-size: 1.2rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.content h3 {
+  font-size: 1rem;
+}
+
 a.category, #container p a.category_name {
   font-family: $h2-font;
   font-size: 0.8em;
