--- a/app/assets/stylesheets/utilities/_variables.scss
+++ b/app/assets/stylesheets/utilities/_variables.scss
@@ -31,5 +31,6 @@ $nav-font: 'Nunito', sans-serif;
 $h3-font: 'Trirong', serif;
 $p-font: 'Trirong', serif;
 $a-font: 'Trirong', serif;
+$li-font: 'Trirong', serif;
 
 // Sizing / Padding
